feat: improve performance with Java 21 virtual threads (#189)
* feat: migrate all thread creation to Java 21 virtual threads

* fix: address review feedback on virtual thread migration

* revert: keep platform threads for long-lived threads, virtual only where beneficial

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>