@@ -107,17 +107,13 @@ public class MultiBackend implements Backend {
      */
     public void flushScreen() {
         multiScreen.flushPhysical();
-        int n = backends.size();
-        for (int i = 0; i < n; i++) {
-            final Backend backend = backends.get(Math.min(i, backends.size()));
+        for (final Backend backend: backends) {
             // Flush to the physical device on another thread.
-            (new Thread(new Runnable() {
-                public void run() {
-                    synchronized (backend.getScreen()) {
-                        backend.flushScreen();
-                    }
+            Thread.ofVirtual().start(() -> {
+                synchronized (backend.getScreen()) {
+                    backend.flushScreen();
                 }
-            })).start();
+            });
         }
     }
 
